--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h3 {
   font-size: 0.75em;
   line-height: 0.95em;
   margin-bottom: 10px;
-  width: 32rem;
+  width: 98%;
 }
 .place {
   width: 2.4em;
