--- a/style.css
+++ b/style.css
@@ -4,12 +4,14 @@
 
 body {
   font: 400 16px/24px Google Sans Text, Arial, Helvetica, sans-serif;
+  margin: 0.25em;
+  background: #282a2c;
 }
 
 .main {
   border: 4px solid black;
   padding: 0.5em;
-  margin: 1em;
+  margin: 0.5em;
   width: fit-content;
   background: #55a536;
   border-radius: 18px;
